ola-parser/src/testdata/syntaxTests/types/var_empty_decl_1.sol
contract C {
    fn f() public pure {
        var a;
        a.NeverReachedByParser();
    }
}
// ----
// ParserError 6933: (52-55): Expected primary expression.
